--- a/gradle.properties
+++ b/gradle.properties
@@ -54,7 +54,7 @@ stdlibWebsubhubVersion=0.2.0-alpha6-SNAPSHOT
 stdlibSqlVersion=0.6.0-alpha6-SNAPSHOT
 
 # Dev Tools JS Libraries
-devToolsVersion=0.10.0
+devToolsVersion=0.10.1-SNAPSHOT
 
 # Open API Module
 openapiVersion = 2.0.8
